Proiect ArcGIS/GpMessages/384726685908700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miercuri, 22 ianuarie 2025 02:28:06</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    .count(0)
    ^
﻿SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at miercuri, 22 ianuarie 2025 02:28:06 (Elapsed Time: 0,52 seconds)</msg></messages>